<resources>
    <!-- General -->
    <string name="app_name">W3rkaut</string>

    <!-- Action Bar -->
    <string name="action_map" translatable="false">Map</string>
    <string name="action_refresh" translatable="false">refresh</string>
    <string name="action_recycler_view" translatable="false">List</string>
    <string name="action_delete_location" translatable="false">delete location</string>

    <!-- Drawer -->
    <string name="open_drawer" translatable="false">Open</string>
    <string name="close_drawer" translatable="false">Close</string>
    <string name="remove_account">Eliminar Cuenta</string>
    <string name="exit">Salir</string>
    <string name="delete_account_message">¿Está seguro que desea dejar de ser
        miembro de W3rkaut?, ¡Atención, su localización será eliminado!</string>
    <string name="privacy_policy_label">Política de Privacidad</string>
    <string name="user_agreement_label">Condicines de Uso</string>

    <!-- API Keys -->
    <string name="facebook_app_id" translatable="false">377165909286055</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyBJVaWzG5vXrpJ_hxeqwETsX-KqF-E6j0g</string>

    <!-- Firebase IDs -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="banner_recycler_view_id" translatable="false">ca-app-pub-5801797101451625/7049993591</string>
    <string name="banner_map_id" translatable="false">ca-app-pub-5801797101451625/9301259594</string>
    <string name="banner_history_id" translatable="false">ca-app-pub-5801797101451625/7425633194</string>

    <!-- App labels -->
    <string name="facebook_connection_failed">No se ha podido conectar con Facebook</string>
    <string name="login_failed">Fallo al iniciar sesión</string>
    <string name="nobody_is_working_out_right_now">Nadie está entrenando en este momento :(</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="publishing">Publicando…</string>
    <string name="ends_in">Finaliza en </string>
    <string name="hours_and">Horas y </string>
    <string name="minutes"> minutos</string>
    <string name="loading">Cargando…</string>
    <string name="account_deleted">Su cuenta ha sido borrada!</string>
    <string name="error_deleting_account">Se ha producido un error al borrar la cuenta!</string>
    <string name="position_updated">Posición actualizada!</string>
    <string name="position_added">Posicion añadida</string>
    <string name="add_location_error">"Lo sentimos, se ha producido un error, intentelo "</string>
    <string name="no_position">No tiene ninguna posición publicada</string>
    <string name="location_deleted">Localización eliminada</string>
    <string name="delete_position_error">No se ha podido eliminar la localización</string>
    <string name="policy_agreement_text">Al registrarse, acepta los términos de Servicio y la política de Privacidad de W3rkaut</string>
    <string name="enter_with_facebook">Entrar con Facebook</string>
    <string name="posted_at">"Publicado a las "</string>
    <string name="on">" el dia "</string>
    <string name="updating">Actualizando...</string>
    <string name="connection_error">Error de conexión</string>
    <string name="done">Finalizado!</string>

</resources>
