<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/remove_account" />
    </group>
    <group
        android:id="@+id/group_policy"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_agreement"
            android:title="@string/user_agreement_label" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy_label" />
    </group>
</menu>