<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_location"
        android:title="@string/action_delete_location"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_map" />
    <item
        android:id="@+id/action_recycler_view"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_recycler_view" />

</menu>